<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="195dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/personalinfosplashart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/create_account_title"
        android:textColor="@color/text_primary_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:text="@string/fill_the_personal_informations"
        android:textColor="@color/text_secondary_dark"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background_dark"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_person"
            app:tint="@color/text_primary_dark" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/username"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:textColor="@color/text_primary_dark"
            android:textColorHint="@color/text_primary_dark"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_background_dark"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_email"
            app:tint="@color/text_primary_dark" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:textColor="@color/text_primary_dark"
            android:textColorHint="@color/text_primary_dark"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_background_dark"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:src="@drawable/icon_university"
            app:tint="@color/text_primary_dark" />

        <EditText
            android:id="@+id/editTextMatricule"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/university_id_matricule"
            android:inputType="text"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:textColor="@color/text_primary_dark"
            android:textColorHint="@color/text_primary_dark"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>